# quantcore

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_brownian.py  bench_parallel.py  bench_pricing.py
examples/: brownian_demo.py  gbm_demo.py  markov_demo.py  option_pricing_demo.py  stats_demo.py
src/cpp/: binding.cpp  brownian.cpp  brownian.hpp  gbm.cpp  gbm.hpp  markov.cpp  markov.hpp  parallel.hpp  pricing.cpp  pricing.hpp  rng.hpp  simple.cpp  special.hpp  stats.cpp  stats.hpp  utils.hpp
src/python/quantcore/: __init__.py  markov.py  pricing.py  stats.py  stochastic.py
tests/: test_brownian.py  test_gbm.py  test_markov.py  test_parallel.py  test_pricing.py  test_stats.py
