[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantcore"
version = "0.1.0"
description = "Quant finance Python package with a C++ backend"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]
