[build-system]
requires = ["scikit-build-core>=0.12", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "quantcore"
version = "0.1.0"
description = "Python library with C++ Computer Kernels"
readme = "README.md"
requires-python = ">=3.10"

[tool.scikit-build]
wheel.packages = ["src/python/quantcore"]
editable.mode = "redirect"
