[build-system]
requires = ["scikit-build-core>=0.12", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "quantcore"
version = "0.1.0"
description = "A quantitative finance library with multithreaded C++ compute kernels and a clean Python API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ronith Manikonda", email = "ronithmanikonda@gmail.com" },
]
keywords = [
    "quantitative-finance",
    "monte-carlo",
    "brownian-motion",
    "geometric-brownian-motion",
    "option-pricing",
    "black-scholes",
    "markov-chain",
    "pybind11",
    "cpp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/RonithManikonda/quantcore"
Repository = "https://github.com/RonithManikonda/quantcore"
Issues = "https://github.com/RonithManikonda/quantcore/issues"

[tool.scikit-build]
wheel.packages = ["src/python/quantcore"]
editable.mode = "redirect"
